# Polymarket-Analyzer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.docker.example.toml  config.example.toml  docker-compose.postgres-only.yml  docker-compose.yml
examples/: subgraph_spike.rs
src/: canonical.rs  config.rs  lib.rs  main.rs  reconciliation.rs  report.rs  settlement_pnl.rs  storage.rs  strategy.rs  trade_pnl.rs
src/polymarket/: data_api.rs  gamma_api.rs  gamma_taxonomy.rs  mod.rs  subgraph.rs
tests/: regression_merge.rs
